--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "keywords": ["TYPO3 CMS"],
     "version": "1.0.0",
     "require": {
-        "typo3/cms-core": "^8.7 || ^9.0"
+        "typo3/cms-core": "^8.7 || ^9.0",
+        "ksubileau/color-thief-php": "^1.3.0"
     },
     "autoload": {
         "psr-4": {
