--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,13 @@
     "license": ["GPL-2.0+"],
     "keywords": ["TYPO3 CMS"],
     "version": "1.0.0",
+    "authors": [
+        {
+            "name": "Maik Schneider",
+            "email": "m.schneider@blueways.de",
+            "role": "Developer"
+        }
+    ],
     "require": {
         "typo3/cms-core": "^8.7 || ^9.0",
         "ksubileau/color-thief-php": "^1.3.0"
