--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,11 @@
         "ksubileau/color-thief-php": "^1.3.0"
     },
     "require-dev": {
-        "typo3/cms-base-distribution": "9.5.*"
+        "typo3/cms-base-distribution": "9.5.*",
+        "bk2k/bootstrap-package": "9.1.*",
+        "phpmd/phpmd": "^2.6.0",
+        "squizlabs/php_codesniffer": "^3.4",
+        "friendsofphp/php-cs-fixer": "^2.9"
     },
     "autoload": {
         "psr-4": {
