--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "bk2k/bootstrap-package": "9.1.*",
         "phpmd/phpmd": "^2.6.0",
         "squizlabs/php_codesniffer": "^3.4",
-        "friendsofphp/php-cs-fixer": "^2.9"
+        "friendsofphp/php-cs-fixer": "^2.9",
+        "typo3/cms-filemetadata": "^9.5"
     },
     "autoload": {
         "psr-4": {
