--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^8.7 || ^9.0",
+        "typo3/cms-core": "^8.7 || ^9.0 || ^10.0",
         "ksubileau/color-thief-php": "^1.3.0"
     },
     "require-dev": {
@@ -36,10 +36,6 @@
         }
     },
     "config": {
-        "bin-dir": "bin",
-        "vendor-dir": "vendor",
-        "platform": {
-            "php": "7.2"
-        }
+        "vendor-dir": "vendor"
     }
 }
