--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^8.7 || ^9.0 || ^10.0",
+        "typo3/cms-core": "^10.0 || ^11.0",
         "ksubileau/color-thief-php": "^1.3.0"
     },
     "require-dev": {
