feat: define ext key in composer.json

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "extra": {
         "typo3/cms": {
             "cms-package-dir": "{$vendor-dir}/typo3/cms",
-            "web-dir": "public"
+            "web-dir": "public",
+            "extension-key": "bw_placeholder_images"
         }
     },
     "config": {
