--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,70 @@
 {
-    "name": "blueways/bw-placeholder-images",
-    "license": "MIT",
-    "type": "typo3-cms-extension",
-    "description": "Inline SVG placeholder images with lazy loading",
-    "homepage": "https://blueways.de",
-    "keywords": ["TYPO3 CMS"],
-    "authors": [
-        {
-            "name": "Maik Schneider",
-            "email": "m.schneider@blueways.de",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "typo3/cms-core": "^10.0 || ^11.0",
-        "ksubileau/color-thief-php": "^1.3.0"
-    },
-    "require-dev": {
-        "typo3/cms-base-distribution": "9.5.*",
-        "bk2k/bootstrap-package": "9.1.*",
-        "phpmd/phpmd": "^2.6.0",
-        "squizlabs/php_codesniffer": "^3.4",
-        "friendsofphp/php-cs-fixer": "^2.9",
-        "typo3/cms-filemetadata": "^9.5"
-    },
-    "autoload": {
-        "psr-4": {
-            "Blueways\\BwPlaceholderImages\\": "Classes"
-        }
-    },
-    "extra": {
-        "typo3/cms": {
-            "cms-package-dir": "{$vendor-dir}/typo3/cms",
-            "web-dir": "public",
-            "extension-key": "bw_placeholder_images"
-        }
-    },
-    "config": {
-        "vendor-dir": "vendor"
+  "name": "blueways/bw-placeholder-images",
+  "license": "MIT",
+  "type": "typo3-cms-extension",
+  "description": "Inline SVG placeholder images with lazy loading",
+  "homepage": "https://blueways.de",
+  "keywords": [
+    "TYPO3 CMS"
+  ],
+  "authors": [
+    {
+      "name": "Maik Schneider",
+      "email": "m.schneider@blueways.de",
+      "role": "Developer"
     }
+  ],
+  "require": {
+    "typo3/cms-core": "^10.0 || ^11.0",
+    "ksubileau/color-thief-php": "^1.3.0"
+  },
+  "require-dev": {
+    "typo3/cms-adminpanel": "^11.5",
+    "typo3/cms-backend": "^11.5",
+    "typo3/cms-belog": "^11.5",
+    "typo3/cms-beuser": "^11.5",
+    "typo3/cms-dashboard": "^11.5",
+    "typo3/cms-extbase": "^11.5",
+    "typo3/cms-extensionmanager": "^11.5",
+    "typo3/cms-filelist": "^11.5",
+    "typo3/cms-filemetadata": "^11.5",
+    "typo3/cms-fluid": "^11.5",
+    "typo3/cms-fluid-styled-content": "^11.5",
+    "typo3/cms-form": "^11.5",
+    "typo3/cms-frontend": "^11.5",
+    "typo3/cms-impexp": "^11.5",
+    "typo3/cms-info": "^11.5",
+    "typo3/cms-install": "^11.5",
+    "typo3/cms-lowlevel": "^11.5",
+    "typo3/cms-opendocs": "^11.5",
+    "typo3/cms-recordlist": "^11.5",
+    "typo3/cms-recycler": "^11.5",
+    "typo3/cms-redirects": "^11.5",
+    "typo3/cms-reports": "^11.5",
+    "typo3/cms-rte-ckeditor": "^11.5",
+    "typo3/cms-scheduler": "^11.5",
+    "typo3/cms-seo": "^11.5",
+    "typo3/cms-setup": "^11.5",
+    "typo3/cms-tstemplate": "^11.5",
+    "typo3/cms-viewpage": "^11.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "Blueways\\BwPlaceholderImages\\": "Classes"
+    }
+  },
+  "extra": {
+    "typo3/cms": {
+      "cms-package-dir": "{$vendor-dir}/typo3/cms",
+      "web-dir": "public",
+      "extension-key": "bw_placeholder_images"
+    }
+  },
+  "config": {
+    "vendor-dir": "vendor",
+    "allow-plugins": {
+      "typo3/class-alias-loader": true,
+      "typo3/cms-composer-installers": true
+    }
+  }
 }
