--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "ksubileau/color-thief-php": "^1.3.0"
   },
   "require-dev": {
+    "roave/security-advisories": "dev-latest",
     "typo3/cms-adminpanel": "^11.5",
     "typo3/cms-backend": "^11.5",
     "typo3/cms-belog": "^11.5",
