--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
   ],
   "require": {
     "typo3/cms-core": "^10.0 || ^11.0",
-    "ksubileau/color-thief-php": "^1.3.0"
+    "ksubileau/color-thief-php": "^1.3.0",
+    "ext-json": "*"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
