--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -6,7 +6,9 @@ services:
 
   Blueways\BwPlaceholderImages\:
     resource: '../Classes/*'
-    exclude: '../Classes/Domain/Model/*'
+    exclude:
+      - '../Classes/Domain/Model/*'
+      - '../Classes/Form'
 
   querybuilder.metadata:
     class: 'TYPO3\CMS\Core\Database\Query\QueryBuilder'
