--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "repository": "https://bitbucket.org/blueways/bw_placeholder_images",
   "devDependencies": {
     "@types/bootstrap": "^4.3.1",
+    "@types/imagesloaded": "^4.1.2",
     "@types/jquery": "^3.3.31",
     "@types/jqueryui": "^1.12.9",
+    "bootstrap": "4.5.3",
+    "css-loader": "^5.0.1",
     "jquery": "^3.3.1",
     "jquery-ui-dist": "^1.12.1",
+    "mini-css-extract-plugin": "^1.3.3",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
+    "ts-loader": "^8.0.12",
     "typescript": "^3.7.2",
-    "@types/imagesloaded": "^4.1.2",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
-    "ts-loader": "^8.0.12",
-    "css-loader": "^5.0.1",
-    "style-loader": "^2.0.0",
-    "sass-loader": "^10.1.0",
-    "bootstrap": "4.5.3",
-    "mini-css-extract-plugin": "^1.3.3",
-    "webpack-merge": "^5.7.3",
-    "terser-webpack-plugin": "^5.1.1"
+    "webpack-merge": "^5.7.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -28,5 +28,8 @@
     "build": "npx webpack --config webpack.prod.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lit": "^2.1.1"
+  }
 }
